--- a/views/add_preinstallation.html
+++ b/views/add_preinstallation.html
@@ -161,6 +161,12 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
+                                        <label for="serial" class="control-label col-lg-2">Serial's Name</label>
+                                        <div class="col-lg-10">
+                                            <input class="form-control" id="serial" name="serial" type="text" required />
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
                                         <label for="equipment" class="control-label col-lg-2">Equipment's Name</label>
                                         <div class="col-lg-10">
                                             <input class=" form-control" id="equipment" name="equipment" type="text" required/>
@@ -196,14 +202,35 @@
                                                 <td>
                                                     <div class="form-group">
                                                         <div class="col-lg-10">
-                                                            <input class=" form-control" id="preinstallRON" name="preinstallRON" placeholder="Enter The Name" type="text" required/>
+                                                            <input class=" form-control" id="preinstallRON" name="preinstallRON" placeholder="Enter The Name" type="text" />
                                                         </div>
                                                     </div>
                                                 </td>
                                                 <td>
                                                     <div class="form-group">
                                                         <div class="col-lg-10">
-                                                            <input class=" form-control" id="preinstallComment" name="preinstallComment" placeholder="Enter Any Comments" type="text" required/>
+                                                            <input class=" form-control" id="preinstallComment" name="preinstallComment" placeholder="Enter Any Comments" type="text" />
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td>Site Power Outlet Available</td>
+                                                <td>
+                                                    <div class="form-group" style="margin-left: 5px!important;">
+                                                        <input type="checkbox" style="width: 20px" class="checkbox form-control" id="preinstallCheck" name="sitepowerCheck"></td>
+                                                </div>
+                                                <td>
+                                                    <div class="form-group">
+                                                        <div class="col-lg-10">
+                                                            <input class=" form-control" id="preinstallRON" name="sitepowerRON" placeholder="Enter The Name" type="text" />
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                                <td>
+                                                    <div class="form-group">
+                                                        <div class="col-lg-10">
+                                                            <input class=" form-control" id="preinstallComment" name="sitepowerComment" placeholder="Enter Any Comments" type="text" />
                                                         </div>
                                                     </div>
                                                 </td>
@@ -217,14 +244,14 @@
                                                 <td>
                                                     <div class="form-group">
                                                         <div class="col-lg-10">
-                                                            <input class=" form-control" id="requiredtoolRON" name="requiredtoolRON" placeholder="Enter The Name" type="text" required/>
+                                                            <input class=" form-control" id="requiredtoolRON" name="requiredtoolRON" placeholder="Enter The Name" type="text" />
                                                         </div>
                                                     </div>
                                                 </td>
                                                 <td>
                                                     <div class="form-group">
                                                         <div class="col-lg-10">
-                                                            <input class=" form-control" id="requiredtoolComment" name="requiredtoolComment" placeholder="Enter Any Comments" type="text" required/>
+                                                            <input class=" form-control" id="requiredtoolComment" name="requiredtoolComment" placeholder="Enter Any Comments" type="text" />
                                                         </div>
                                                     </div>
                                                 </td>
@@ -238,14 +265,14 @@
                                                 <td>
                                                     <div class="form-group">
                                                         <div class="col-lg-10">
-                                                            <input class=" form-control" id="requiredsupllyRON" name="requiredsupllyRON" placeholder="Enter The Name" type="text" required/>
+                                                            <input class=" form-control" id="requiredsupllyRON" name="requiredsupllyRON" placeholder="Enter The Name" type="text" />
                                                         </div>
                                                     </div>
                                                 </td>
                                                 <td>
                                                     <div class="form-group">
                                                         <div class="col-lg-10">
-                                                            <input class=" form-control" id="requiredsupllyComment" name="requiredsupllyComment" placeholder="Enter Any Comments" type="text" required/>
+                                                            <input class=" form-control" id="requiredsupllyComment" name="requiredsupllyComment" placeholder="Enter Any Comments" type="text" />
                                                         </div>
                                                     </div>
                                                 </td>
@@ -259,14 +286,14 @@
                                                 <td>
                                                     <div class="form-group">
                                                         <div class="col-lg-10">
-                                                            <input class=" form-control" id="sitelockRON" name="sitelockRON" placeholder="Enter The Name" type="text" required/>
+                                                            <input class=" form-control" id="sitelockRON" name="sitelockRON" placeholder="Enter The Name" type="text" />
                                                         </div>
                                                     </div>
                                                 </td>
                                                 <td>
                                                     <div class="form-group">
                                                         <div class="col-lg-10">
-                                                            <input class=" form-control" id="sitelockComment" name="sitelockComment" placeholder="Enter Any Comments" type="text" required/>
+                                                            <input class=" form-control" id="sitelockComment" name="sitelockComment" placeholder="Enter Any Comments" type="text" />
                                                         </div>
                                                     </div>
                                                 </td>
@@ -280,14 +307,14 @@
                                                 <td>
                                                     <div class="form-group">
                                                         <div class="col-lg-10">
-                                                            <input class=" form-control" id="lockkeyRON" name="lockkeyRON" placeholder="Enter The Name" type="text" required/>
+                                                            <input class=" form-control" id="lockkeyRON" name="lockkeyRON" placeholder="Enter The Name" type="text" />
                                                         </div>
                                                     </div>
                                                 </td>
                                                 <td>
                                                     <div class="form-group">
                                                         <div class="col-lg-10">
-                                                            <input class=" form-control" id="lockkeyComment" name="lockkeyComment" placeholder="Enter Any Comments" type="text" required/>
+                                                            <input class=" form-control" id="lockkeyComment" name="lockkeyComment" placeholder="Enter Any Comments" type="text" />
                                                         </div>
                                                     </div>
                                                 </td>
