--- a/views/home/EmergencyPre_installation.handlebars
+++ b/views/home/EmergencyPre_installation.handlebars
@@ -35,6 +35,7 @@
 </head>
 
 <body>
+    {{#each newform}}
     <section id="container">
         <!-- **********************************************************************************************************************************************************
         TOP BAR CONTENT & NOTIFICATIONS
@@ -76,12 +77,7 @@
                             <span>Equipments</span>
                         </a>
                     </li>
-                    <li class="sub-menu">
-                        <a href="/showPreMain">
-                            <i class="fa fa-wrench"></i>
-                            <span>Preventive Maintainance</span>
-                        </a>
-                    </li>
+                    
                     <li class="sub-menu">
                         <a class="active" href="javascript:;">
                             <i class="fa  fa-hospital-o"></i>
@@ -96,7 +92,6 @@
                                     <li><a href="/showPre-installationSurgery">Pre-installation Reports</a></li>
                                     <li><a href="/showDailyInspectionSurgery">Daily Inspection Reports</a></li>
                                     <li><a href="/showInventoryListingSurgery">Inventory Listing Reports</a></li>
-                                    <li><a href="/showWorkOrdersSurgery">Work Order Reports</a></li>
                                 </ul>
                             </li>
                             <li class="sub-menu">
@@ -107,7 +102,7 @@
                                     <li class="active"><a href="/showPre-installationEmergency">Pre-installation Reports</a></li>
                                     <li><a href="/showDailyInspectionEmergency">Daily Inspection Reports</a></li>
                                     <li><a href="/showInventoryListingEmergency">Inventory Listing Reports</a></li>
-                                    <li><a href="/showWorkOrdersEmergency">Work Order Reports</a></li>
+
                                 </ul>
                             </li>
                             <li class="sub-menu">
@@ -115,10 +110,10 @@
                                     <span>Catheterization</span>
                                 </a>
                                 <ul class="sub">
-                                    <li><a href="/showPre-installationCatheter">Pre-installation Reports</a></li>
+                                    <li ><a href="/showPre-installationCatheter">Pre-installation Reports</a></li>
                                     <li><a href="/showDailyInspectionCatheter">Daily Inspection Reports</a></li>
                                     <li><a href="/showInventoryListingCatheter">Inventory Listing Reports</a></li>
-                                    <li><a href="/showWorkOrdersCatheter">Work Order Reports</a></li>
+
                                 </ul>
                             </li>
                         </ul>
@@ -132,7 +127,7 @@
                             <li><a href="/pre-installationform">Add Pre-installation Report</a></li>
                             <li><a href="/showDailyInspectionForm">Add Daily Inspection Report</a></li>
                             <li><a href="/showInventoryListingForm">Add Inventory Listing Report</a></li>
-                            <li><a href="/showWorkOrdersForm">Add Work Order Report</a></li>
+
                         </ul>
                     </li>
 
@@ -166,7 +161,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    {{#each newform}}
+                                    
                                     <tr class="gradeA">
                                         <td>{{this.dataValues.Equipment}}</td>
                                         <td>{{this.dataValues.Date}}</td>
@@ -178,7 +173,7 @@
                                             <button class="btn btn-danger btn-xs"  data-toggle="modal" data-target="#delete"><i class="fa fa-trash-o"></i></button>
                                         </td>
                                     </tr>
-                                {{/each}}    
+                                  
                                 </tbody>
                             </table>
                         </div>
@@ -212,6 +207,7 @@
         </div>
 
     </section>
+
     <!-- js placed at the end of the document so the pages load faster -->
     <script src="lib/jquery/jquery.min.js"></script>
     <script src="lib/bootstrap/js/bootstrap.min.js"></script>
@@ -233,6 +229,7 @@
 
     <!--script for this page-->
     <script type="text/javascript">
+    
         /* Formating function for row details */
         function fnFormatDetails(oTable, nTr) {
             var aData = oTable.fnGetData(nTr);
@@ -261,32 +258,52 @@
 </div>
 
 <div class="row notheader">
+   
     <div class="cell">
         Pre-Installation Form Copied
     </div>
     <div class="cell">
-        <span>` + "True" + `</span>
+        <div class="form-group" style="margin-left: 5px!important;">
+            <input disabled type="checkbox" style="width: 20px" class="checkbox form-control" >
+        </div>
     </div>
     <div class="cell">
-        <span>` + "Name" + `</span>
+        <span> {{this.dataValues.Pre_installationFormCopiedRON}}</span>
     </div>
     <div class="cell pl-3">
-        <span>` + "Comment" + `</span>
+        <span> {{this.dataValues.Pre_installationFormCopiedComment}}</span>
     </div>
 </div>
-
+<div class="row notheader">
+    <div class="cell">
+        Site Power Outlet Available
+    </div>
+    <div class="cell">
+        <div class="form-group" style="margin-left: 5px!important;">
+            <input disabled type="checkbox" style="width: 20px" class="checkbox form-control" >
+        </div>
+    </div>
+    <div class="cell">
+        <span> {{this.dataValues.SitePowerOutletAvailableRON}} </span>
+    </div>
+    <div class="cell pl-3">
+        <span> {{this.dataValues.SitePowerOutletAvailableComment}} </span>
+    </div>
+</div>
 <div class="row notheader">
     <div class="cell">
         Required Tools Available
     </div>
     <div class="cell">
-        <span>` + "True" + `</span>
+        <div class="form-group" style="margin-left: 5px!important;">
+            <input disabled type="checkbox" style="width: 20px" class="checkbox form-control" >
+        </div>
     </div>
     <div class="cell">
-        <span>` + "Name" + `</span>
+        <span> {{this.dataValues.RequiredToolsAvailableRON}}</span>
     </div>
     <div class="cell pl-3">
-        <span>` + "Comment" + `</span>
+        <span> {{this.dataValues.RequiredToolsAvailableComment}} </span>
     </div>
 </div>
 <div class="row notheader">
@@ -294,13 +311,15 @@
         Required Supplies Available
     </div>
     <div class="cell">
-        <span>` + "True" + `</span>
+        <div class="form-group" style="margin-left: 5px!important;">
+            <input disabled type="checkbox" style="width: 20px" class="checkbox form-control" >
+        </div>
     </div>
     <div class="cell">
-        <span>` + "Name" + `</span>
+        <span> {{this.dataValues.RequiredSuppliesAvailableRON}} </span>
     </div>
     <div class="cell pl-3">
-        <span>` + "Comment" + `</span>
+        <span>{{this.dataValues.RequiredSuppliesAvailableComment}} </span>
     </div>
 </div>
 
@@ -309,13 +328,15 @@
         Site Can Be Locked After Hours
     </div>
     <div class="cell">
-        <span>` + "True" + `</span>
+        <div class="form-group" style="margin-left: 5px!important;">
+            <input disabled type="checkbox" style="width: 20px" class="checkbox form-control" >
+        </div>
     </div>
     <div class="cell">
-        <span>` + "Name" + `</span>
+        <span> {{this.dataValues.SiteCanBeLockedAfterHoursRON}} </span>
     </div>
     <div class="cell pl-3">
-        <span>` + "Comment" + `</span>
+        <span> {{this.dataValues.SiteCanBeLockedAfterHoursComment}} </span>
     </div>
 </div>
 
@@ -324,13 +345,15 @@
         Lock Keys Assigned To Personnel
     </div>
     <div class="cell">
-        <span>` + "True" + `</span>
+        <div class="form-group" style="margin-left: 5px!important;">
+            <input disabled type="checkbox" style="width: 20px" class="checkbox form-control" >
+        </div>
     </div>
     <div class="cell">
-        <span>` + "Name" + `</span>
+        <span> {{this.dataValues.LockKeysAssignedToPersonalRON}} </span>
     </div>
     <div class="cell pl-3">
-        <span>` + "Comment" + `</span>
+        <span> {{this.dataValues.LockKeysAssignedToPersonalComment}} </span>
     </div>
 </div>`
 
@@ -384,7 +407,9 @@
                 }
             });
         });
+        
     </script>
+     {{/each}} 
 </body>
 
 </html>
