--- a/views/add_preinstallation.html
+++ b/views/add_preinstallation.html
@@ -195,7 +195,7 @@
                                                 <td>Pre-Installation Form Copied</td>
                                                 <td>
                                                     <div class="form-group" style="margin-left: 5px!important;">
-                                                        <input disabled type="checkbox" style="width: 20px" class="checkbox form-control" name="preinstallCheck">
+                                                        <input type="checkbox" style="width: 20px" class="checkbox form-control" name="preinstallCheck">
                                                     </div>
                                                 </td>
 
